# FeatureDetector

./: README.md
Clustering/: CMakeLists.txt  main.cpp  test.cpp  video.cpp
Clustering/src/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Clusterizador.cpp  Clusterizador.hpp
Clustering/test/: CMakeLists.txt  test.cpp
FeatureExtraction/: CMakeLists.txt  clustering.cpp  clustering.h  clustering.txt  dis_ang_translation.cpp  dis_ang_translation.h  ellipse_detector.cpp  ellipse_detector.h  feature_extraction.cpp  feature_extraction.h  geometry_utils.cpp  geometry_utils.h  goal_detection.cpp  goal_detection.h  hough_line_detection.cpp  hough_line_detection.h  img_processing.cpp  img_processing.h  line_detection.cpp  line_detection.h  line_feature_detection.cpp  line_feature_detection.h  main.cpp
